Modified script to make bash script as main script

--- a/task_config_template.cfg
+++ b/task_config_template.cfg
@@ -266,5 +266,5 @@ patterns = ['Average_inference_time_bvlc_alexnet_cpu: (\d+\.\d+|\d+)', 'Average_
 metrics            = ['Average_inference_time_bvlc_alexnet_cpu','Average_inference_time_bvlc_googlenet_cpu','Average_inference_time_bvlc_reference_caffenet_cpu','Average_inference_time_bvlc_reference_rcnn_ilsvrc13_cpu','Average_inference_time_densenet121_cpu','Average_inference_time_resnet50_cpu','Average_inference_time_shufflenet_cpu','Average_inference_time_squeezenet_cpu','Average_inference_time_vgg19_cpu','Average_inference_time_bvlc_alexnet_gpu','Average_inference_time_bvlc_googlenet_gpu','Average_inference_time_bvlc_reference_caffenet_gpu','Average_inference_time_bvlc_reference_rcnn_ilsvrc13_gpu','Average_inference_time_densenet121_gpu','Average_inference_time_resnet50_gpu','Average_inference_time_shufflenet_gpu','Average_inference_time_squeezenet_gpu','Average_inference_time_vgg19_gpu']
 
 compute_method     = ['last', 'last', 'last', 'last', 'last', 'last', 'last', 'last', 'last', 'last', 'last', 'last', 'last', 'last', 'last', 'last', 'last', 'last']
-command_to_execute = python ./onnx_benchmark/import_benchmarkscript.py
+command_to_execute = sudo bash ./onnx_benchmark/setup.sh
 num_gpus           = 1
